--- a/LineUp/app/src/main/res/values/strings.xml
+++ b/LineUp/app/src/main/res/values/strings.xml
@@ -22,4 +22,22 @@
     <string name="add_star">별달기</string>
     <string name="lineup">라인업</string>
     <string name="n">명</string>
+    <string name="res_info_1">예약 인원</string>
+    <string name="res_info_2">예약 이유</string>
+    <string name="date">데이트</string>
+    <string name="family">가족</string>
+    <string name="group">모임</string>
+    <string name="sample_name">아웃백 스테이크</string>
+    <string name="setting">설정</string>
+    <string name="setting_alarm">알림 설정</string>
+    <string name="version_1">버전 정보</string>
+    <string name="anounce">약관</string>
+    <string name="question">문의</string>
+    <string name="account">계정 관리</string>
+    <string name="push">푸시 알림</string>
+    <string name="coupon">쿠폰 만료일 알림</string>
+    <string name="version_2">버전</string>
+    <string name="anounce_2">약관 보기</string>
+    <string name="question_2">문의 하기</string>
+    <string name="logout">로그아웃</string>
 </resources>
