--- a/LineUp/app/src/main/res/values/strings.xml
+++ b/LineUp/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="anounce_2">약관 보기</string>
     <string name="question_2">문의 하기</string>
     <string name="logout">로그아웃</string>
+    <string name="readay">서비스 준비 중입니다.</string>
 </resources>
