--- a/LineUp/app/src/main/res/values/strings.xml
+++ b/LineUp/app/src/main/res/values/strings.xml
@@ -42,4 +42,16 @@
     <string name="question_2">문의 하기</string>
     <string name="logout">로그아웃</string>
     <string name="readay">서비스 준비 중입니다.</string>
+    <string name="rev_name">예약자 이름 : </string>
+    <string name="rev_num">예약 인원 : </string>
+    <string name="waitingtime">남은 대기 시간 : </string>
+    <string name="sample">딩거</string>
+    <string name="min">분</string>
+    <string name="cancel">예약 취소</string>
+    <string name="send_link">링크 보내기</string>
+    <string name="no_rec">아직 다녀오신 곳이 없습니다.</string>
+    <string name="no_coup">등록된 쿠폰이 없습니다.</string>
+    <string name="no_rev">등록된 라인업이 없습니다.</string>
+    <string name="no_fav">등록된 즐겨찾기가 없습니다.</string>
+    <string name="no_review">현재 등록된 리뷰가 없습니다.</string>
 </resources>
