--- a/LineUp/app/src/main/res/values/strings.xml
+++ b/LineUp/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="Chinese">중 식</string>
     <string name="Western">양 식</string>
     <string name="Halmae">할매집</string>
+    <string name="complete">라인업 완료되었습니다.</string>
+    <string name="repetition">이미 라인업하셨습니다.</string>
 </resources>
